# computor-backend

./: .env.dev  .env.prod  .gitignore  CLAUDE.md  COMPLETE_ENDPOINT_ANALYSIS.md  ENDPOINT_FIXES_COMPLETE.md  GITLAB_MANAGED_PROVISIONING_PLAN.md  LICENSE  MESSAGE_MENTIONS_PLAN.md  README.md  STUDENT_REPO_MODES_UX_PLAN.md  api.sh  build_backend_package.sh  computor.sh  create_gitlab_users.py  docker-compose-dev.yaml  docker-compose-prod.yaml  error_registry.yaml  forgejo_start.sh  forgejo_stop.sh  generate.sh  generate_clients.sh  generate_error_codes.py  generate_error_codes.sh  generate_schema.sh  generate_types.sh  generate_validators.sh  initialize_system.sh  maintenance.sh  migrations.sh  run_gitlab_test.sh  seed.sh  setup-env.sh  startup.sh  stop.sh  test.sh  web.sh  wipe-coder-complete.sh  wipe-coder.sh
computor-backend/: README.md  analyze_endpoints.py  error_registry.yaml  fix_docstrings.py  pyproject.toml  replace_get_db_usage.py  revert_get_db_changes.py  seed_service_types.py  test_code_structure.py  test_database_audit.py  update_get_db_imports.py  verify_audit_setup.py
computor-backend/src/: asdf.py  cli.py  pytest.ini  requirements.txt  seeder.py  server.py  setup.py
computor-backend/src/computor_backend/: account_types.py  cache.py  cache_decorators.py  config.py  database.py  gitlab_utils.py  maintenance_scheduler.py  minio_client.py  redis_cache.py  server.py  settings.py  storage_config.py  storage_security.py  task_tracker.py
computor-cli/: README.md  pyproject.toml
computor-cli/src/computor_cli/: __init__.py  admin.py  api_token_cli.py  auth.py  chat.py  cli.py  config.py  consent.py  crud.py  delete.py  deployment.py  documents.py  generate_clients.py  generate_schema.py  generate_types.py  generate_validators.py  grading.py  imports.py  release.py  service_cli.py  template.py  temporal_worker.py  test.py  utils.py  worker.py
computor-client/: .gitignore  ADVANCED_USAGE.md  QUICK_REFERENCE.md  README.md  pyproject.toml
computor-client/examples/: basic_usage.py  custom_endpoints.py  role_based_views.py
computor-client/src/computor_client/: __init__.py  advanced_base.py  base.py  client.py  custom_clients.py  exceptions.py  http.py  role_clients.py  sync.py
computor-client/tests/: __init__.py  conftest.py  test_base.py  test_client.py  test_exceptions.py  test_http.py  test_sync.py
computor-coder/: README.md  pyproject.toml
computor-coder/deployment/: .env.example  create-user.sh  docker-compose.yml  generate-secret.sh  install.sh  setup-admin.sh
computor-coder/src/computor_coder/: __init__.py  client.py  config.py  plugin.py  router.py  schemas.py  web.py
computor-testing/: Dockerfile.sandbox  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt
computor-testing/blocks/: README.md  __init__.py  cli.py  models.py
computor-testing/ctcore/: __init__.py  helpers.py  models.py  security.py  stdio.py
computor-testing/ctexec/: __init__.py  base.py  compiled.py  environment.py  exceptions.py  interpreted.py  resources.py  runtime.py
computor-testing/dependencies/: README.md  __init__.py  example.dependencies.yaml  installer.py  models.py  schema.yaml
computor-testing/docker/: Dockerfile.c  Dockerfile.document  Dockerfile.fortran  Dockerfile.full  Dockerfile.julia  Dockerfile.octave  Dockerfile.python  Dockerfile.r  README.md
computor-testing/docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
computor-testing/sandbox/: __init__.py  backends.py  cli.py  config.py  executor.py  security.py
computor-testing/scripts/: integration_test.sh  migrate_meta_yaml.py
computor-testing/testers/: __init__.py  base.py  cli.py  models.py  runners.py
computor-testing/testers/executors/: __init__.py  c.py  document.py  fortran.py  isolation.py  julia.py  octave.py  python.py  r.py  test_graphics_security.py  test_isolation.py  test_python_security.py
computor-testing/testers/tests/: __init__.py  conftest_base.py  test_base.py
computor-testing/tests/: test_diff_formatters.py
computor-types/: .gitignore  README.md  pyproject.toml
computor-types/src/computor_types/: __init__.py  accounts.py  analytics.py  api_tokens.py  artifacts.py  auth.py  base.py  cascade_deletion.py  codeability_meta.py  coder.py  consent.py  course_content_kind.py  course_content_types.py  course_contents.py  course_deployment.py  course_execution_backends.py  course_families.py  course_family_members.py  course_family_roles.py  course_git.py  course_groups.py  course_member_accounts.py  course_member_comments.py  course_member_gradings.py  course_member_import.py  course_members.py  course_roles.py  course_workspaces.py  courses.py  deployment.py  deployment_base.py  deployment_config.py  deployments.py  deployments_refactored.py  documents.py  encryption.py  endpoints.py  errors.py  example.py  exceptions.py  (+62 more)
computor-utils/: .gitignore  README.md  pyproject.toml
computor-utils/src/computor_utils/: __init__.py  vsix_utils.py
integration-tests/: .env.integration.template  .gitignore  Makefile  README.md  conftest.py  docker-compose.integration.yaml  pyproject.toml  reporting.py  test_course_gitlab_provisioning.py
integration-tests/deployments/: example-repository.yaml  testing-worker.yaml
integration-tests/fixtures/: api.py  authoring.py  clients.py  course.py  db.py  examples.py  forgejo.py  gitlab.py  grading.py  keycloak_auth.py  permission_matrix.py  personas.py  submissions.py  users.py
integration-tests/helpers/: assertions.py
integration-tests/reports/: example.md
integration-tests/scripts/: bootstrap_gitlab.py  stage_realm.py  wait_for_services.sh
integration-tests/suites/: README.md
integration-tests/suites/01_smoke/: test_stack_reachable.py
integration-tests/suites/02_auth/: test_api_tokens.py  test_invites.py  test_login.py  test_logout.py  test_refresh.py  test_sso_login.py  test_whoami.py
integration-tests/suites/03_permissions/: conftest.py  test_admin.py  test_anon.py  test_coverage_guard.py  test_exma.py  test_lecturer.py  test_lena.py  test_maintainer.py  test_orga.py  test_owner.py  test_student.py  test_tobi.py  (+3 more)
(+1509 files in other folders)
