[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computor-cli"
version = "0.1.0"
description = "Command-line interface for Computor platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "computor-types>=0.1.0",
    "computor-client>=0.1.0",
    "computor-utils>=0.1.0",
    "click>=8.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
computor = "computor_cli.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]
