[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computor-types"
version = "0.1.0"
description = "Pydantic DTOs for Computor platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Computor Team", email = "team@computor.dev"}
]
keywords = ["computor", "types", "pydantic", "dto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0",
    "email-validator>=2.0",
    "keycove>=0.1.0",
    "text-unidecode>=1.3",
    "pydantic-yaml>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/computor/computor-types"
Documentation = "https://docs.computor.dev/types"
Repository = "https://github.com/computor/computor-types"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
