[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computor-integration-tests"
version = "0.0.1"
description = "Full-stack integration tests for the Computor platform."
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.5",
  "httpx>=0.27",
  "python-gitlab>=4.4",
  "temporalio>=1.5",
  "pyyaml>=6.0",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "requests>=2.31",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["suites"]
addopts = [
  "-ra",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "smoke: fast reachability checks against the running stack",
  "auth: authentication and token flows",
  "permissions: RBAC / claim matrix tests",
  "deployment: hierarchy deployment workflow tests",
  "examples: example upload / assignment tests",
  "release: lecturer release / student template generation tests",
  "student: student-side workflow tests",
  "lifecycle: full end-to-end lifecycle tests",
  "slow: long-running tests",
]
asyncio_mode = "auto"
